--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A remark-lint rule disallows a mixed-case URL hash",
   "author": "Masafumi Koba",
-  "license": "ISC",
+  "license": "MIT",
   "keywords": [
     "remark-lint",
     "remark-lint-rule"
@@ -15,6 +15,66 @@
     "ybiq": "^15.4.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:watch": "echo \"Error: no test specified\" && exit 1 --watch",
+    "test:coverage": "echo \"Error: no test specified\" && exit 1 --coverage",
+    "pretest": "npm run lint",
+    "lint:js": "eslint --cache --ext=js,jsx,cjs,mjs,ts,tsx .",
+    "lint:js:fix": "npm run lint:js -- --fix",
+    "lint:md": "remark . --frail",
+    "lint:md:fix": "remark . --output",
+    "lint:types": "tsc --noEmit",
+    "lint:types:watch": "npm run lint:types -- --watch",
+    "lint:commit": "commitlint --from HEAD~10",
+    "lint": "npm-run-all --print-label --silent --parallel lint:*",
+    "prettier": "prettier --cache --ignore-path .gitignore .",
+    "lint:styles": "npm run prettier -- --check",
+    "lint:styles:fix": "npm run prettier -- --write",
+    "format": "npm-run-all --print-label --silent --parallel lint:*:fix",
+    "clean": "git clean -dx --force --exclude=node_modules --exclude=.husky",
+    "prerelease": "git switch main && git pull && npm ci && npm run clean && npm test && npm run clean",
+    "release": "standard-version",
+    "release:dry-run": "standard-version --dry-run",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,cjs,mjs,ts,tsx}": "eslint --cache --fix",
+    "!(*.snap)": "prettier --cache --write",
+    "!(CHANGELOG).md": "remark --frail"
+  },
+  "standard-version": {
+    "sign": true,
+    "scripts": {
+      "postchangelog": "prettier --write CHANGELOG.md"
+    }
+  },
+  "remarkConfig": {
+    "plugins": [
+      "remark-preset-ybiquitous"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "body-max-line-length": [
+        1,
+        "always",
+        100
+      ]
+    }
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "ybiquitous/node"
+    ],
+    "ignorePatterns": [
+      "coverage",
+      "dist",
+      "tmp"
+    ],
+    "reportUnusedDisableDirectives": true
   }
 }
