--- a/package.json
+++ b/package.json
@@ -11,13 +11,27 @@
   "repository": "ybiquitous/remark-lint-no-mixed-case-url-hash",
   "type": "module",
   "exports": "./index.js",
+  "files": [
+    "index.js"
+  ],
+  "dependencies": {
+    "unified-lint-rule": "^2.1.1",
+    "unist-util-visit": "^4.1.1"
+  },
   "devDependencies": {
+    "@tsconfig/strictest": "^1.0.1",
+    "eslint-config-ybiquitous": "^16.0.0",
+    "eslint-plugin-jest": "^27.0.4",
+    "jest": "^29.0.3",
+    "remark": "^14.0.2",
+    "remark-preset-ybiquitous": "^0.3.1",
+    "typescript": "^4.8.3",
     "ybiq": "^15.4.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:watch": "echo \"Error: no test specified\" && exit 1 --watch",
-    "test:coverage": "echo \"Error: no test specified\" && exit 1 --coverage",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "npm run test --ignore-scripts -- --watch",
+    "test:coverage": "npm run test --ignore-scripts -- --coverage",
     "pretest": "npm run lint",
     "lint:js": "eslint --cache --ext=js,jsx,cjs,mjs,ts,tsx .",
     "lint:js:fix": "npm run lint:js -- --fix",
@@ -25,7 +39,7 @@
     "lint:md:fix": "remark . --output",
     "lint:types": "tsc --noEmit",
     "lint:types:watch": "npm run lint:types -- --watch",
-    "lint:commit": "commitlint --from HEAD~10",
+    "lint:commit": "echo skip || commitlint --from HEAD~10",
     "lint": "npm-run-all --print-label --silent --parallel lint:*",
     "prettier": "prettier --cache --ignore-path .gitignore .",
     "lint:styles": "npm run prettier -- --check",
@@ -75,6 +89,19 @@
       "dist",
       "tmp"
     ],
-    "reportUnusedDisableDirectives": true
+    "reportUnusedDisableDirectives": true,
+    "overrides": [
+      {
+        "files": "index.js",
+        "rules": {
+          "prefer-destructuring": "off",
+          "dot-notation": "off"
+        }
+      },
+      {
+        "files": "**/*.test.js",
+        "extends": "plugin:jest/recommended"
+      }
+    ]
   }
 }
