chore(deps): use Dependabot group updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,12 @@ updates:
     schedule:
       interval: monthly
     versioning-strategy: increase
+    groups:
+      development-dependencies:
+        dependency-type: "development"
+        exclude-patterns:
+          - "remark"
+          - "remark-*"
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
