chore: fix prettier error for tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "@tsconfig/strictest",
-  "exclude": ["**/*.test.*", "coverage/**"],
+  "exclude": ["**/*.test.*", "coverage/**"]
 }
