chore: fix commitlint failure due to `header-max-length`
Also, this shortens a Dependabot group name for development dependencies.

--- a/package.json
+++ b/package.json
@@ -76,6 +76,11 @@
         1,
         "always",
         300
+      ],
+      "header-max-length": [
+        1,
+        "always",
+        150
       ]
     }
   },
