--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       interval: monthly
     versioning-strategy: increase
     groups:
-      development-dependencies:
+      dev-deps:
         dependency-type: "development"
         exclude-patterns:
           - "remark"
