--- a/.github/workflows/npm-audit-fix.yml
+++ b/.github/workflows/npm-audit-fix.yml
@@ -12,7 +12,7 @@ jobs:
       contents: write
       pull-requests: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: ybiquitous/npm-audit-fix-action@v7
+      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
+      - uses: ybiquitous/npm-audit-fix-action@eb2de0ff634636b097d5f79dddd727d770825535 # v7.3.1
         with:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
