--- a/package.json
+++ b/package.json
@@ -24,17 +24,15 @@
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
     "eslint-config-ybiquitous": "^21.1.0",
-    "eslint-plugin-jest": "^28.12.0",
-    "jest": "^29.7.0",
     "remark": "^15.0.1",
     "remark-preset-ybiquitous": "^0.4.4",
     "typescript": "^5.8.3",
     "ybiq": "^18.0.0"
   },
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "node --test",
     "test:watch": "npm --ignore-scripts test -- --watch",
-    "test:coverage": "npm --ignore-scripts test -- --coverage",
+    "test:coverage": "npm --ignore-scripts test -- --experimental-test-coverage",
     "pretest": "npm run lint",
     "lint:js": "eslint --cache --ext=js,jsx,cjs,mjs,ts,tsx .",
     "lint:js:fix": "npm run lint:js -- --fix",
@@ -105,10 +103,6 @@
           "prefer-destructuring": "off",
           "dot-notation": "off"
         }
-      },
-      {
-        "files": "**/*.test.js",
-        "extends": "plugin:jest/recommended"
       }
     ]
   },
