--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@tsconfig/strictest",
+  "compilerOptions": {
+    "noEmit": true
+  },
   "exclude": ["**/*.test.*", "coverage/**"]
 }
