chore: enable `checkJs` option in `tsconfig.json`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/strictest",
   "compilerOptions": {
+    "checkJs": true,
     "noEmit": true
   },
   "include": ["**/*"],
