--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,13 @@
 name: Release
 
 on:
-  push:
-    tags: ["**"]
+  pull_request:
+    branches: [main]
+    types: [closed]
 
 jobs:
   release:
-    uses: ybiquitous/.github/.github/workflows/nodejs-release-reusable.yml@main
+    uses: ybiquitous/.github/.github/workflows/nodejs-release-reusable.yml@530c2571685fc8fd3462fad7d19beb613e28609d # v2.3.0
     permissions:
       contents: write
       id-token: write
