--- a/package.json
+++ b/package.json
@@ -74,6 +74,11 @@
         1,
         "always",
         300
+      ],
+      "header-max-length": [
+        2,
+        "always",
+        150
       ]
     }
   },
